--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
         .header { 
             background-color: #008000; 
-            color: white; 
+            color: #FFD700; 
             padding: 20px; 
             border-radius: 10px 10px 0 0; 
         }
@@ -46,7 +46,7 @@
         }
         /* Iframe styling */
         #prayerWidget {
-            /* सेटिंग्स आपके द्वारा दिए गए आकार के अनुसार */
+            /* As Per Your Location */
             width: 182px; 
             height: 358px; 
             border: 1px solid #ddd;
@@ -80,9 +80,9 @@
     </div>
 
     <div class="widget-box">
-        <h2>🌏 नमाज़ और Sunrise का समय</h2>
+        <h2>🕋 SALAH AND SUNRISE TIME</h2>
         
-        <p class="disclaimer">कृपया सुनिश्चित करें कि विजेट सही स्थान और गणना विधि दिखाता है।</p>
+        <p class="disclaimer">PLEASE CONFIRM BEFORE YOU ACTION</p>
         
         <iframe id="prayerWidget" 
                 title="prayerWidget" 
@@ -91,7 +91,9 @@
         </iframe>
 
         <div class="footer-note">
-            (समय सीधे IslamicFinder से लिया गया है और यूज़र की IP लोकेशन के आधार पर निर्धारित होता है।)
+            (TIME AS PER ISLAMICFINDER.ORG, AND BASED ON YOUR LOCATION)
+            (جزاكم الله خيرا كثيرا)
+
         </div>
     </div>
 </div>
