--- a/index.html
+++ b/index.html
@@ -84,11 +84,10 @@
         
         <p class="disclaimer">PLEASE CONFIRM BEFORE YOU ACTION</p>
         
-        <iframe id="prayerWidget" 
-                title="prayerWidget" 
-                scrolling="no" 
-                src="https://www.islamicfinder.org/prayer-widget/"> 
-        </iframe>
+ <iframe id="prayerWidget" height="360" scrolling="no"
+      src="https://www.islamicfinder.org/prayer-widget/1275339/shafi/3/0/18.0/18.0">
+    </iframe>
+
 
         <div class="footer-note">
             (TIME AS PER ISLAMICFINDER.ORG, AND BASED ON YOUR LOCATION)
@@ -100,3 +99,4 @@
 
 </body>
 </html>
+
