--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
         
         <p class="disclaimer">PLEASE CONFIRM BEFORE YOU ACTION</p>
         
- <iframe id="prayerWidget" height="360" scrolling="no"
-      src="https://www.islamicfinder.org/prayer-widget/1275339/shafi/3/0/18.0/18.0">
-    </iframe>
+        <iframe id="prayerWidget" 
+                title="prayerWidget" 
+                scrolling="no" 
+                src="https://www.islamicfinder.org/prayer-widget/"> 
+        </iframe>
 
 
         <div class="footer-note">
@@ -99,4 +101,5 @@
 
 </body>
 </html>
+
 
