--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
         
         <p class="disclaimer">PLEASE CONFIRM BEFORE YOU ACTION</p>
         
-<iframe style="width: 182px; height: 358px; border: 1px solid #ddd;" scrolling="no" src="https://www.islamicfinder.org/prayer-widget/shafi/6/0/18.5/18.0"> </iframe>
-
+<iframe style="width: 182px; height: 358px; border: 1px solid #ddd;" scrolling="no" src="https://www.islamicfinder.org/prayer-widget/"> </iframe>
 
         <div class="footer-note">
             (TIME AS PER ISLAMICFINDER.ORG, AND BASED ON YOUR LOCATION)
@@ -97,6 +96,7 @@
 
 </body>
 </html>
+
 
 
 
